# TOFLUX

./: .pre-commit-config.yaml  README.md  pyproject.toml  readme.md
toflux/brep/: artery.json  bone.json  channel_drag.json  channel_flow.json  channel_flow_wall.json  double_pipe.json  double_pipe_long.json  fish.json  hungry_horse.json  single_pipe.json
toflux/experiments/conjugate_heat/: solve.ipynb  topopt.ipynb
toflux/experiments/fluid/: flow_reversal.ipynb  fluid_solve.ipynb  fluid_topopt.ipynb  solve.ipynb  topopt_dissip_power.ipynb  topopt_drag.ipynb  topopt_flow_reverse.ipynb
toflux/experiments/fluid/tounn/: network.py  topopt.ipynb
toflux/experiments/fsi/: fsi_solve.ipynb  fsi_topopt.ipynb  pressure_coupling.py  solve.ipynb  topopt.ipynb
toflux/experiments/non_newtonian/: fe_non_newtonian.py  non_newt_artery_topopt.ipynb  topopt.ipynb
toflux/experiments/structural/: solve_struct.ipynb  struct_topopt.ipynb
toflux/experiments/thermo_fluid/: conjugate_heat_solver.ipynb  thermo_fluid_topopt.ipynb
toflux/src/: bc.py  constrained_loss.py  fe_fluid.py  fe_struct.py  fe_thermal.py  geometry.py  material.py  mesher.py  mma.py  solver.py  utils.py  viz.py
